Bug 404464 - Missing MIME type for application/zstd
Summary: Missing MIME type for application/zstd
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: plugins (other bugs)
Version First Reported In: 18.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ragnar Thomsen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-17 07:45 UTC by Higa
Modified: 2019-02-17 11:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Higa 2019-02-17 07:45:09 UTC
SUMMARY
shared-mime-info 1.11 includes 2 MIME types for Zstandard archive, application/zstd (RFC 8478) and application/x-zstd-compressed-tar.
When using shared-mime-info 1.11 and above, a Zstandard archive may be identified as application/zstd, and Ark incorrectly reports that no suitable plugin can be found.

STEPS TO REPRODUCE
1. Install the latest version (1.12) of shared-mime-info
2. Create a Zstandard archive: tar -c --numeric-owner -f - test_folder/ | zstdmt - > test.tar.zst
3. Open the archive using Ark

OBSERVED RESULT
Ark returns an error message: "No suitable plugin found. Ark does not seem to support this file type."

EXPECTED RESULT
Ark should open the archive successfully.

SOFTWARE/OS VERSIONS
Linux
KDE Plasma Version: 5.15.0
KDE Frameworks Version: 5.55.0
shared-mime-info Version: 1.12
zstd Version: 1.3.8
Comment 1 Elvis Angelaccio 2019-02-17 11:14:47 UTC
Git commit 91341d05e8f887dd7a30b17191485a64d7af9d78 by Elvis Angelaccio.
Committed on 17/02/2019 at 11:11.
Pushed by elvisangelaccio into branch 'Applications/18.12'.

Fix loading of tar.zst archives

We forgot to add the new zstd mimetypes to the workaroud for mimetype
detection of tar archives.
FIXED-IN: 18.12.3

M  +4    -2    kerfuffle/mimetypes.cpp

https://commits.kde.org/ark/91341d05e8f887dd7a30b17191485a64d7af9d78