Fix loading of tar.zst archives

We forgot to add the new zstd mimetypes to the workaroud for mimetype
detection of tar archives.

BUG: 404464
FIXED-IN: 18.12.3